# alexa-notify

./: .gitignore  README.md  __init__.py  alexa_notify.py  config.json.example  pyproject.toml
.github/workflows/: push_to_registry.yaml
