[project]
name = "ComfyUI-alexa-notify"
version = "1.0.0"
description = "ComfyUI custom node for sending Alexa notifications when workflows execute"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/tenowg/alexa-notify"

[tool.comfy]
PublisherId = "tenowg"
DisplayName = "Alexa Notify"
Icon = ""
